mule-user-guide/v/3.5/poll-schedulers.adoc
= 轮询调度程序

默认情况下，Mule中的*Poll Scopes*被设置为每1000毫秒轮询一次资源以获取新数据。有时，您可能希望调整默认的轮询间隔，或者配置*polling schedule*以遵循更复杂的逻辑。

本文档提供了有关如何通过Anypoint Studio中提供的两种方法配置轮询计划的详细信息：

.  <<Fixed Frequency Scheduler>>
.  <<Cron Scheduler>>

== 假设

本文档假设您一般熟悉 link:/anypoint-studio/v/6/index[Anypoint Studio]和 http://en.wikipedia.org/wiki/Polling_(computer_science)[轮询]。详细了解Mule中的 link:/mule-user-guide/v/3.6/poll-reference[投票范围]。

== 固定频率调度器

顾名思义，这种配置投票计划的方法只是定义一个固定的基于时间的频率来轮询一个源。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

In Studio's visual editor, open the *Poll* message processor's *properties editor*. Select *Fixed frequency scheduler*, then adjust the values of the fields according to the table below.

image:poll_scheduler.png[poll_scheduler]

[%header,cols="4*"]
|===
|Field |Default Value |Description |XML
|*Frequency* |1000 |Polling frequency, relative to time unit. a|
----
frequency="1000"
----

|*Start Delay* |0 |Upon triggering the flow for the first time, Mule stalls the running of the poll for a specific amount of time. This time period is expressed in the same time units as the frequency. a|
----
startDelay="0"
----

|*Time unit* |MILLISECONDS a|
The time unit for the frequency value.

MILLISECONDS, SECONDS, MINUTES, HOURS, DAYS

 a|
----
-------
timeUnit="MILLISECONDS"
----
-------

|===

....
[tab,title="XML Editor"]
....


In Studio's XML editor, add a *`fixed-frequency-scheduler`* child element to your *`poll`* element. Configure the child element's attributes according to the table below.

[source, xml, linenums]
----
<poll doc:name="Poll">
        <fixed-frequency-scheduler frequency="1000" timeUnit="MILLISECONDS" startDelay="0"/>
        <sfdc:authorize config-ref="SalesforceGlobal" display="Salesforce1" doc:name="Salesforce1"/>
    </poll>
----

[%header,cols="34,33,33"]
|===
|Attribute |Description |Example
|`frequency` |Polling frequency, relative to time unit. When set to 0 or a negative value, it switches to the default. a|
----
frequency="1000"
----

|`timeUnit` a|
The time unit for the frequency value.

MILLISECONDS, SECONDS, MINUTES, HOURS, DAYS

 a|
----
timeUnit="MILLISECONDS"
----

|`startDelay` |Upon triggering the flow for the first time, Mule stalls the running of the poll for a specific amount of time. This time period is expressed in the same time units as the frequency. |`startDelay="0"`
|===

....
------

== Cron Scheduler

As the name implies, this method allows you to configure a polling schedule using http://en.wikipedia.org/wiki/Cron[cron] expressions. If you're not familiar with cron syntax, don't be intimidated! It's reasonably easy to learn, and you can even leverage online tools that can help you build cron expressions.

[tabs]
------
[tab,title="Studio Visual Editor"]
....

In Studio's visual editor, open the Poll message processor's *properties editor*. Select *Cron scheduler*, then adjust the value of the *Expression* field according to the table below.

image:cron_scheduler.png[cron_scheduler]

[%header,cols="4*"]
|===
|Field |Default Value |Description |XML
|*Expression* |  - |Use cron expression to define poll schedule. a|
----
expression="1 1 1 1,7 *"
----

|===

The table below offers a few examples of typical Cron expressions:

[%header,cols="2*"]
|====
|Expression |Behavior
|0 0 12 * * ? |Poll at 12pm (noon) every day
|0 15 10 ? * * |Poll at 10:15am every day
|0 15 10 * * ? |Poll at 10:15am every day
|0 15 10 * * ? * |Poll at 10:15am every day
|0 15 10 * * ? 2005 |Poll at 10:15am every day during the year 2005
|0 * 14 * * ? |Poll every minute starting at 2pm and ending at 2:59pm, every day
|0 0/5 14 * * ? |Poll every 5 minutes starting at 2pm and ending at 2:55pm, every day
|1 1 1 1,7 * |Poll the first day of January and the first day of June, every year (in the first second of the first minute of the first hour) +
|====

....
[tab,title="XML Editor"]
....

In Studio's XML editor, add a *`schedulers:cron-scheduler`* child element to your *`poll`* element. Configure the child element's attribute according to the table below.

[source, xml, linenums]
----
<poll doc:name="Poll" frequency="1000">
        <schedulers:cron-scheduler expression="1 1 1 1,7 *"/>
        <sfdc:authorize config-ref="SalesforceGlobal" display="Salesforce1" doc:name="Salesforce1"/>
    </poll>
----

[%header,cols="4*"]
|===
|Parameter |Default Value |Description |Example
|`expression` |- |Use cron expression to define poll schedule. a|
----
expression="1 1 1 1,7 *"
----
|===

Here are a few examples of typical Cron expressions:

[%header,cols="2*"]
|====
|Expression |Behavior
|0 0 12 * * ? |Poll at 12pm (noon) every day
|0 15 10 ? * * |Poll at 10:15am every day
|0 15 10 * * ? |Poll at 10:15am every day
|0 15 10 * * ? * |Poll at 10:15am every day
|0 15 10 * * ? 2005 |Poll at 10:15am every day during the year 2005
|0 * 14 * * ? |Poll every minute starting at 2pm and ending at 2:59pm, every day
|0 0/5 14 * * ? |Poll every 5 minutes starting at 2pm and ending at 2:55pm, every day
|1 1 1 1,7 * |Poll the first day of January and the first day of June, every year (in the first second of the first minute of the first hour)
|====

....
------

== See Also

* Learn more about link:/mule-user-guide/v/3.6/poll-reference[Poll Scopes] in Mule.
* Reference link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule Expression Language MEL].
* Learn more about link:/mule-user-guide/v/3.6/mule-expression-language-date-and-time-functions[MEL Date and Time Functions].
